QmlCompiler: Define variables also for conversion registers

The previous code relies on any jump-induced conversion types to also
show up somewhere else. This does not apply to dev because the register
variables have been re-organized there.

Fixes: QTBUG-102273
Change-Id: I7723ff3b4992cecc38ce531e76494874910dfaea
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit fe9d9b22f20ecfd119c4dcaf1d05f5b27906a49e)