tests/auto/qml/qmlcppcodegen/data/fromBoolValue.qml
@@ -1,0 +1,6 @@
+pragma Strict
+import QtQuick 6
+
+Item {
+    height: !(parent && parent.visible) ? 100 : 0
+}
