tests/auto/qml/qmlcppcodegen/tst_qmlcppcodegen.cpp
@@ -127,6 +127,7 @@ private slots:
     void fallbackLookups();
     void prefixedMetaType();
     void evadingAmbiguity();
+    void fromBoolValue();
 };
 
 void tst_QmlCppCodegen::simpleBinding()
@@ -1927,6 +1928,22 @@ void tst_QmlCppCodegen::evadingAmbiguity()
     QScopedPointer<QObject> o2(c2.create());
     QCOMPARE(o2->objectName(), QStringLiteral("Ambiguous"));
     QCOMPARE(o2->property("i").toString(), QStringLiteral("Ambiguous2"));
+}
+
+void tst_QmlCppCodegen::fromBoolValue()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, QUrl(u"qrc:/TestTypes/fromBoolValue.qml"_qs));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+    QScopedPointer<QObject> o(c.create());
+    QCOMPARE(o->property("height").toInt(), 100);
+
+    QScopedPointer<QObject> parent(c.create());
+    o->setProperty("parent", QVariant::fromValue(parent.data()));
+    QCOMPARE(o->property("height").toInt(), 0);
+
+    parent->setProperty("visible", QVariant::fromValue(false));
+    QCOMPARE(o->property("height").toInt(), 100);
 }
 
 void tst_QmlCppCodegen::runInterpreted()
